phylax/base/namespace.yaml
# Default namespace for Phylax
---
apiVersion: v1
kind: Namespace
metadata:
  name: phylax
