phylax/base/ingress.yaml
# Ingress for Phylax service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phylax-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    # Uncomment for testing.
    # cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    # Assign TLS for this custom domain.
    - idkthisisademo.lol
    secretName: phylax-tls
  rules:
    # Set custom domain name to listen to.
    - host: idkthisisademo.lol
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: phylax
              port:
                number: 4269
